# ChatEcho

./: .env.example  .gitignore  IMPROVEMENTS.md  README.md  UPLOAD_TO_GITHUB.md  example_memory_chat.py  fuc_call.py  main.py  profile_csv_example.py  pyproject.toml  realtime_voice_chat.py  requirements.txt  run_asr_test.py  run_chat_test.py  setup.py  streamlit_voice_chat.py  temp.py  test_asr_demo.py  test_memory_chat.py  web_voice_chat.py
asr/: __init__.py  config.py  core.py  env_config.py  exceptions.py  recorder.py  transcriber.py  utils.py
chat/: README.md  __init__.py  config.py  core.py  env_config.py  exceptions.py  function_caller.py  function_loader.py  llm_client.py  logging_config.py
chat/function_calling/: __init__.py  add.py  compare.py  control_camera.py  count_letter_in_string.py  mul.py
chat/functions/: __init__.py  add.py  compare.py  count_letter_in_string.py  mul.py
chat/tools/: __init__.py  add.json  compare.json  control_camera.json  count_letter_in_string.json  (+1 more)
chatecho/: __init__.py  api_client.py  audio_config.py  cli.py  config.py  init.py  recorder.py  sdk.py  speech_processor.py  streaming.py  vad.py
example/: audio_test.py  improved_tts_example.py  secure_tts_example.py  tts_debug.py  tts_example.py
functions/: math_functions.py  string_functions.py
report/: README.md  __init__.py  csv_writer.py  example.py  extractor.py  json_writer.py  parser.py  processor.py
templates/: index.html
tts/: README.md  __init__.py  audio_utils.py  config.py  core.py  env_config.py  exceptions.py  player.py  request_handler.py  utils.py
